# asv-formatter

./: .codecov.yml  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: pre-commit-ci.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml
docs/: conf.py  index.rst
src/: .pylintrc
src/lf_asv_formatter/: __main__.py  asv_formatter.py  simple_formatter.py  tabulate_formatter.py
tests/: .pylintrc  conftest.py
tests/data/: original_output
tests/data/simple/: expected_output  expected_output_verbose  expected_output_with_tags  original_output  original_output_verbose  original_output_with_tags
tests/data/tabulate/: expected_output  expected_output_verbose  original_output_verbose
tests/lf_asv_formatter/: test_asv_formatter.py  test_packaging.py
