
[project]
name = "lf-asv-formatter"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "LINCC Frameworks Team", email = "Lincc-frameworks-team@lists.lsst.org" }
]
description = "Re-format the output of ASV (air-speed-velocity) for github messages"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "tabulate", # Used to prettify ASV output tables
]

[project.urls]
"Source Code" = "https://github.com/lincc-frameworks/lf-asv-formatter"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "black", # Used for static linting of files
    "jupyter", # Clears output from Jupyter notebooks
    "pre-commit", # Used to run checks before finalizing a git commit
    "pylint", # Used for static linting of files
    "pytest",
    "pytest-cov", # Used to report total code coverage
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=10.0.5", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/lf_asv_formatter/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
    "docs",
]
addopts = "--doctest-modules --doctest-glob=*.rst"

[tool.black]
line-length = 110
[tool.isort]
profile = "black"
line_length = 110


[tool.coverage.run]
omit = [
    "src/lf_asv_formatter/_version.py",
    "src/lf_asv_formatter/__main__.py",
]